--- a/index.css
+++ b/index.css
@@ -120,5 +120,5 @@ img.search-pics {
 span {
   font-size: 14px;
   font-family: Tahoma, Verdana, Segoe, sans-serif;
-  color:white;
+  color: black;
 }
