--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 }
 body{
 	height: 1000px;
-	background:black;
+	background:linear-gradient(to top,white 0%, rgb(246, 139, 68 )100%);
 	bottom:1000%;
 }
 h3{
